--- a/src/stories/button.css
+++ b/src/stories/button.css
@@ -6,11 +6,10 @@
   cursor: pointer;
   display: inline-block;
   line-height: 1;
-  position: relative;
 }
 .storybook-button--primary {
   color: white;
-  background-color: green;
+  background-color: red;
 }
 .storybook-button--secondary {
   color: #333;
@@ -29,6 +28,4 @@
   font-size: 16px;
   padding: 12px 24px;
 }
-
-
 
